updated fields in directory, seperated tabs, and added a view button for project

--- a/frontend/src/styles/Directory.css
+++ b/frontend/src/styles/Directory.css
@@ -53,5 +53,12 @@
     overflow-x: auto;
   }
   
+  .rdg-header-row .rdg-cell {
+    white-space: normal !important;
+    word-break: break-word;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+  }
   
   
