--- a/frontend/src/styles/User.css
+++ b/frontend/src/styles/User.css
@@ -1,48 +1,50 @@
-h1, h2 {
+.user h1, 
+.user h2 {
     margin-top: 0px;
     text-align: start;
 }
   
-.long {
+.user .long {
     margin: 0;
     padding: 0;
     white-space: pre-wrap;
 }
   
-.long div {
+.user .long div {
     padding: 0 0 10px 0;
 }
   
-table {
+.user table {
     border-top: solid 1px #eee;
     width: 100%;
 }
   
-ul {
+.user ul {
     padding-inline-start: inherit;
     margin: 0;
 }
   
-th {
+.user th {
     width: 30%;
 }
   
-h2 {
+.user h2 {
     margin-top: 30px;
 }
   
-th, td {
+.user th, 
+.user td {
     text-align: start;
     vertical-align: top;
     padding: 1.5em 0;
     border-bottom: solid 1px #eee;
 }
 
-.header {
+.user .header {
     margin-right: 0.6em;
 }
 
-.role {
+.user .role {
     font-size: 0.5em;
     overflow: hidden;
     border-radius: 10px;
