--- a/frontend/src/styles/Project.css
+++ b/frontend/src/styles/Project.css
@@ -20,6 +20,7 @@
 }
   
 .project ul {
+    list-style-type: none;
     padding-inline-start: inherit;
     margin: 0;
 }
@@ -38,4 +39,38 @@
     vertical-align: top;
     padding: 1.5em 0;
     border-bottom: solid 1px #eee;
+}
+
+.project .buttonArea {
+    margin-top: 30px;
+}
+
+.project button {
+    border: none;
+    width: max-content;
+    padding: 1rem;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+    
+.project button:hover {
+    background-color: #00529B;
+    cursor: pointer;
+}
+
+.project .eye {
+    color: #007bff;
+    font-size: 20px;
+    vertical-align:text-bottom;
+    margin-right: 0.2em;
+  }
+  
+.project .eye:hover {
+    color: #00529B;
+    cursor: pointer;
 }
