--- a/frontend/src/styles/User.css
+++ b/frontend/src/styles/User.css
@@ -68,3 +68,38 @@
     color: #00529B;
     cursor: pointer;
 }
+
+.user .buttonArea {
+    margin-top: 30px;
+}
+
+.user button {
+    border: none;
+    width: max-content;
+    padding: 1rem;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    margin-right: 20px;
+}
+    
+.user button:hover {
+    background-color: #00529B;
+    cursor: pointer;
+}
+
+.user .eye {
+    color: #007bff;
+    font-size: 20px;
+    vertical-align:text-bottom;
+    margin-right: 0.2em;
+  }
+  
+.user .eye:hover {
+    color: #00529B;
+    cursor: pointer;
+}
